--- a/CAPS.html
+++ b/CAPS.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counseling and Psychological Services (CAPS)</title>
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,7 +14,7 @@
     <body class="caps-page">
         
     <header>
-        <a href="">Skip to Main Content</a>
+        <a href="#main-content">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
@@ -26,7 +27,7 @@
         <h1>Counseling and Psychological Services (CAPS)</h1>
 
     </header>
-    <main>
+    <main id="main-content">
         <div>
             <h2>Our Commitment</h2>
             <figure>
@@ -47,7 +48,7 @@
                 while pursuing your academic goals. </p>
 
         </div>
-        <div>
+        <div class="content-section">
             <h2>Our Services</h2>
             <ul>
                 <li>
@@ -72,10 +73,10 @@
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/j9rL9mByuRI?si=oT3uyyVFRv1VuMux" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-            <div>
+            <div class="content-section">
                 <h2>Our Services</h2>
                 <figure>
                     <img src="images/UHS.jpg" alt="University Health Services building">
@@ -118,11 +119,19 @@
             <div></div>
     </main>
     <footer>
-        <p>MSI Academic Advising | <a
-                href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
-                Advising </a></p>
+        <div class="footer-info">
+            <h3>Contact Information</h3>
+            <p>Email: student.success@umich.edu</p>
+            <p>Phone: (734) 555-1234</p>
+            <p>Office Hours: Monday-Friday, 9am-5pm</p>
+        </div>
+        <p class="copyright">MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising</a></p>
+        <p>© Copyrights <span id="year"></span> by University of Michigan. All rights reserved.</p>
     </footer>
 
 </body>
+<script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+</script>
 
 </html>
