--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Success Portal</title>
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,7 +14,7 @@
     <body class="index-page">
         
     <header>
-        <a href="">Skip to Main Content</a>
+        <a href="#main-content">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
@@ -26,8 +27,8 @@
         <h1>Student Success Portal</h1>
 
     </header>
-    <main>
-        <section>
+    <main id="main-content">
+        <div class="content-section">
             <h2>Welcome to the UM Grad Success Navigator</h2>
             <p> Your Comprehensive Guide to Resources for Graduate School Success</p>
             <p>This guide is set up to help you be successul inside and outside of the classroom and we have included
@@ -39,12 +40,12 @@
                 <li>Life Outside Classroom</li>
                 <li>Contact</li>
             </ol>
-        </section>
-        <section>
+        </div>
+        <div class="content-section">
             <h2>Physical Health</h2>
             <p>Keeping your body healthy is essential for success. The University of Michigan offers numerous resources
                 to help you stay in top physical condition:</p>
-            <article>
+            <div>
                 <h3>University Health Service (UHS)</h3>
                 <figure>
                     <img src="images/UHS.jpg" alt="University Health Services building">
@@ -52,8 +53,8 @@
                 </figure>
                 <p>University Health Service (UHS): Access comprehensive medical care, including routine check-ups,
                     vaccinations, and specialist referrals.</p>
-            </article>
-            <article>
+                </div>
+            <div>
                 <h3>Recreational Sports</h3>
                 <figure>
                     <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg"
@@ -62,42 +63,42 @@
                 </figure>
                 <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and
                     healthy.</p>
-            </article>
-        </section>
+                </div>
+        </div>
 
-        <section>
+        <div class="content-section">
             <h2>Mental Health</h2>
             <p>Maintaining your mental well-being is crucial for thriving in graduate school. Here are resources to
                 support your mental health:</p>
-            <article>
+            <div>
                 <h3><a href="CAPS.html">Counseling and Psychological Services (CAPS)</a></h3>
                 <p> Access individual counseling, group therapy, workshops, and crisis intervention services.</p>
-            </article>
-            <article>
+            </div>
+            <div>
                 <h3>Wellness Coaching:</h3>
 
                 <p>Work with a wellness coach to develop strategies for managing stress, time, and overall well-being.
                 </p>
-            </article>
-            <article>
+            </div>
+            <div>
                 <h3>Mindfulness Resources:</h3>
 
                 <p> Participate in mindfulness and meditation sessions to cultivate a calm and focused mind.</p>
-            </article>
-            <article>
+            </div>
+            <div>
                 <h3>Support Groups:</h3>
 
                 <p> Join peer support groups for shared experiences and collective coping strategies.</p>
-            </article>
-        </section>
+            </div>
+        </div>
 
-        <section id="life-outside-classroom">
+        <div class="content-section">
             <h2>Life Outside the Classroom</h2>
             <p>Graduate school is more than just academics. It's important to cultivate a balanced life. Here are some
                 resources to help you enjoy life outside the classroom:</p>
-            <article>
+            <div>
 
-            </article>
+            </div>
             <ul>
                 <li><strong>Student Organizations:</strong> Join one of the many student organizations to connect with
                     peers who share your interests and passions.</li>
@@ -110,15 +111,23 @@
                 <li><strong>Housing and Dining:</strong> Find information on on-campus housing options and dining
                     services to ensure a comfortable living experience.</li>
             </ul>
-        </section>
+        </div>
         <!-- Content taken & modified from UMGPT with the prompt, "write me a webpage of intro content to help University of Michigan Master's students navigate different resources for being successful in grad school - this will include academic resources, physical health resources, mental health resources, support for life outside the classroom"
         UMGPT. (2024). UMGPT (August 29th version) [Large language model]. -->
     </main>
     <footer>
-        <p>MSI Academic Advising | <a
-                href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
-                Advising </a></p>
+        <div class="footer-info">
+            <h3>Contact Information</h3>
+            <p>Email: student.success@umich.edu</p>
+            <p>Phone: (734) 555-1234</p>
+            <p>Office Hours: Monday-Friday, 9am-5pm</p>
+        </div>
+        <p class="copyright">MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising</a></p>
+        <p>© Copyrights <span id="year"></span> by University of Michigan. All rights reserved.</p>
     </footer>
 </body>
+<script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+</script>
 
 </html>
