--- a/404.html
+++ b/404.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found</title>
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <header>
-        <a href="">Skip to Main Content</a>
+        <a href="#main-content">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
@@ -22,7 +23,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main-content">
         <div>
             <h2>Page Not Found</h2>
             <p>We're sorry, but the page you are looking for cannot be found. Please check the URL and try again, or return
@@ -30,12 +31,19 @@
         </div>
     </main>
 
-        <footer>
-            <p>MSI Academic Advising | <a
-                    href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
-                    Advising </a></p>
-        </footer>
-
+    <footer>
+        <div class="footer-info">
+            <h3>Contact Information</h3>
+            <p>Email: student.success@umich.edu</p>
+            <p>Phone: (734) 555-1234</p>
+            <p>Office Hours: Monday-Friday, 9am-5pm</p>
+        </div>
+        <p class="copyright">MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising</a></p>
+    </footer>
+        <script>
+            document.getElementById("year").innerHTML = new Date().getFullYear();
+        </script>
+        <!-- Got this date script from https://www.codexworld.com/how-to/get-current-year-to-display-dynamic-year-in-copyright-using-javascript/ -->
 </body>
 
 </html>
