--- a/Academic_Suport.html
+++ b/Academic_Suport.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academic Suport at UMSI</title>
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,7 +14,7 @@
     <body class="academic-page">
         
     <header>
-        <a href="">Skip to Main Content</a>
+        <a href="#main-content">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
@@ -26,13 +27,9 @@
         <h1>Academic Suport at UMSI</h1>
 
     </header>
-    <main>
-        <div>
+    <main id="main-content">
+        <div class="content-section">
             <h2>Academic Support</h2>
-            <figure>
-                <img src="images/UMSI_MHIClassroom_02202023_12.JPG" alt="UMSI Classroom">
-                <figcaption>UMSI Classroom</figcaption>
-            </figure>
             <p>At the University of Michigan School of Information (UMSI), we are committed to supporting our students'
                 academic success by offering a wide array of resources and services. Our academic advising team provides
                 personalized guidance to help you navigate your curriculum, select courses, and address any academic
@@ -42,10 +39,13 @@
                 services and the UMSI Writing Center are available to support you in mastering complex subjects and
                 enhancing your written communication skills. By utilizing these academic resources, UMSI students can
                 thrive in their studies and achieve their educational goals. </p>
-
+                <figure>
+                    <img src="images/UMSI_MHIClassroom_02202023_12.JPG" alt="UMSI Classroom">
+                    <figcaption>UMSI Classroom</figcaption>
+                </figure>
         </div>
-        <div>
-            <div>
+        <div class="content-section">
+            <div class="video-container">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZrDRVTF_-i0?si=hLRZBIGpaNw1oyyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div>
@@ -70,7 +70,7 @@
                     mentorship opportunities, UMSI creates an enriching environment where students can develop into
                     skilled information professionals while achieving their educational goals.</p>
             </div>
-            <div>
+            <div class="content-section">
                 <h2>Top 5 Reasons to Seek Academic Support at U-M</h2>
                 <ul>
                     <li>
@@ -104,11 +104,20 @@
             <div></div>
     </main>
     <footer>
-        <p>MSI Academic Advising | <a
-                href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
-                Advising </a></p>
+        <div class="footer-info">
+            <h3>Contact Information</h3>
+            <p>Email: student.success@umich.edu</p>
+            <p>Phone: (734) 555-1234</p>
+            <p>Office Hours: Monday-Friday, 9am-5pm</p>
+        </div>
+        <p class="copyright">MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising</a></p>
+        <p>© Copyrights <span id="year"></span> by University of Michigan. All rights reserved.</p>
+
     </footer>
 
 </body>
+<script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+</script>
 
 </html>
