--- a/CEW+.html
+++ b/CEW+.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Center for the Education of Women + (CEW+)</title>
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +13,7 @@
     <!-- On CEW+.html -->
     <body class="cew-page">
     <header>
-        <a href="">Skip to Main Content</a>
+        <a href="#main-content">Skip to Main Content</a>
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
         <nav>
             <ul>
@@ -27,11 +28,11 @@
         </h1>
        
     </header>
-    <main>
-        <div>
+    <main id="main-content">
+        <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/AKFhLURxNxc?si=dvd5pektKoYuobaG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <div>
+        <div class="content-section">
             <h2>Key Services Offered by CEW+</h2>
             <ul>
                 <li>
@@ -74,10 +75,10 @@
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="content-section">
             <h2>Comprehensive Support</h2>
             <figure>
-                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-01.jpg" alt="Presenting Research">
+                <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-01 .jpg" alt="Presenting Research">
             </figure>
             <p>At the University of Michigan Center for the Education of Women+ (CEW+), we are committed to supporting
                 your academic journey through comprehensive resources designed to help you succeed. Our experienced
@@ -94,7 +95,7 @@
                 your achievements. </p>
 
         </div>
-        <div>
+        <div class="content-section">
             <h2>Supporting Success</h2>
             <figure>
                 <img src="images/MCOMMONS-EarthFestClimateActionSummit2024-08.jpg" alt="Student Success">
@@ -113,10 +114,18 @@
         <div></div>
     </main>
     <footer>
-        <p>MSI Academic Advising | <a
-                href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic
-                Advising </a></p>
-    </footer>
+    <div class="footer-info">
+        <h3>Contact Information</h3>
+        <p>Email: student.success@umich.edu</p>
+        <p>Phone: (734) 555-1234</p>
+        <p>Office Hours: Monday-Friday, 9am-5pm</p>
+    </div>
+    <p class="copyright">MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising</a></p>
+    <p>© Copyrights <span id="year"></span> by University of Michigan. All rights reserved.</p>
+</footer>
 </body>
+<script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+</script>
 
 </html>
